line alignment fix groups page

--- a/styles/group.module.css
+++ b/styles/group.module.css
@@ -110,7 +110,7 @@
 .listStyleWhite {
   background-color: white;
   position: absolute;
-  top: 1.5em;
+  top: 1.4em;
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 0.125em;
@@ -171,7 +171,7 @@
   }
 
   .listStyleWhite {
-    top: 2.5em;
+    top: 3.1em;
   }
 
   .listStyle {
